// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> disabled renders correctly 1`] = `
<StyledComponent
  disabled={true}
  forwardedRef={null}
  is={[Function]}
>
  Options
</StyledComponent>
`;

exports[`<Select /> readOnly renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  is={[Function]}
  readOnly={true}
>
  Options
</StyledComponent>
`;

exports[`<Select /> renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  is={[Function]}
>
  Options
</StyledComponent>
`;

exports[`<Select /> underline renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  is={[Function]}
  underline={true}
>
  Options
</StyledComponent>
`;
